Jul 24, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- new feature: quick filter

Jul 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- do not set fs_game if mod is a 'main mod'

Jul 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- fix NULL pointer dereference when sorting rule/value columns with subtress
  (#990692)

Jul 13, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- update German translation

Jul 12, 2004: Jordi Mallach <jordi@sindominio.net>
- update Catalan translation.

Jul 04, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- rename xml tags suggest_commands -> command, main_mods -> main_mod
- make command a NULL terminated string list
- clean up some file dialog handling
- fix sound test button not playing sound before pressing ok

Jun 28, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- make Copy and Copy+ menu items also copy to CLIPBOARD instead of only PRIMARY
  to allow paste via Ctrl-v

Jun 19, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- use separate types for ET and RTCW so update from master doesn't throw away
  all servers. Today's qstat cvs version required.
- add gametypes for World of Padman Q3A mod
- add support for Jedi Academy (wine game, patch by Steffen Pankratz)
- add an animated tray icon for the GTK2 version (patch by Jochen Baier)

Jun 06, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- update Danish translation (Morten Brix Pedersen)

Jun 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for Americas Army 2.1. Still no master, old version no longer
  supported, requires recent qstat from cvs (gs2 protocol)

May 29, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add AlienSwarm custom arguments for UT2004, also specify separate log file
  for each mod (patch by Andreas Schneider)

May 24, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add Troopers custom arguments for UT2004 (patch by Andreas Schneider)

May 23, 2004: Ludwig Nussel <l-n@users.sourceforge.net>