@@ -1,3 +1,7 @@
+Aug 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- support multiple words in quick filter (AND)
+- update German translation
+
 Jul 24, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - new feature: quick filter
 
